class EAParameters1 {
    public const string SPEED = "Speed";
    public const string GROUNDED = "Grounded";
    public const string GETHIT = "GetHit";
    public const string GO_DEAD = "GoDead";
    public const string ATTACK_A = "AttackA";
    public const string ATTACK_B = "AttackB";
    public const string WALK_SPEED = "WalkSpeed";
}
