class EAStat {
    public const string ENEMY_IDLE = "Idel";
    public const string ENEMY_JUMP = "Jump";
    public const string ENEMY_WALK = "Walk";
    public const string ENEMY_HIT = "Hit";
    public const string ENEMY_ATTACK_A = "AttackA";
    public const string ENEMY_ATTACK_B = "AttackB";
    public const string ENEMY_DEAD = "Dead";
    public const string ENEMY_SHIELD_BLOCK = "ShieldBlock";

}

